--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Дмитрий Давыдов" />
   <meta name="copyright" content="https://smartlanding.biz/otpravka-dannyx-formy-v-telegram.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css">
 </head>
 
@@ -49,7 +49,7 @@
     </form>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="/telegramform/js/telegramform.js"></script>
+  <script src="./telegramform/js/telegramform.js"></script>
   <script>
 
     // Кастомизация поля с файлом. Подробнее тут: https://smartlanding.biz/stilizaciya-input-type-file.html
